--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower shop assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/flower-shop.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Let's make <br> beautiful flowers  a part of your life.</h1>
+                <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn-primary">shop now</button>
+            </div>
+            <img class="flower-pic"src="images/pngwing 10.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="flowers">
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the  readable content of a page when looking at its layout.</p>
+            <div class="flower-img-container">
+                <div  class="flower-img">
+                    <img  class="img-size" src="images/pngwing 6.png" alt="">
+                    <h4 class="flower-title">pink flower </h4>
+                </div>
+                <div class="flower-img">
+                    <img class="img-size" src="images/pngwing 5.png" alt="">
+                    <h4 class="flower-title">pink flower </h4>
+                </div>
+                <div class="flower-img" >
+                    <img class="img-size" src="images/pngwing 7.png" alt="">
+                    <h4 class="flower-title">pink flower </h4>
+                </div>
+            </div>
+        </section>
+        <section></section>
+    </main>
     <footer></footer>
 </body>
 </html>
