--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="sale">
+            <div class="sale-up">
+                <div class="sale-up-content">
+                    <h3 class="sale-title">Hot Deal ! Sale Up To 25% <span class="text-primary">off</span></h3>
+                    <p class="sale-descripion">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Sign Up</button>
+                </div>
+                <img src="images/pngwing 8.png" alt="">
+            </div>
+        </section>
+        <section >
+            <h3 class="section-title">Instagram</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="flower-imgs">
+                <img src="images/Flower 01.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+            </div>
+        </section>
+        <section>
+            
+        </section>
     </main>
     <footer></footer>
 </body>
