--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-        <section class="flowers">
+        <section >
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="section-description">It is a long established fact that a reader will be distracted by the  readable content of a page when looking at its layout.</p>
             <div class="flower-img-container">
@@ -59,10 +59,15 @@
                 <img src="images/Rectangle 6.png" alt="">
             </div>
         </section>
-        <section>
-            
+        <section class="deals">
+            <h3 class="section-title">Get The Latest Deals</h3>
+            <p class="section-description">$30 coupon for first shopping</p>
+            <input type="email" name="" id="">
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <h3>FlowerShop</h3>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    </footer>
 </body>
 </html>
