--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">shop now</button>
             </div>
-            <img class="flower-pic"src="images/pngwing 10.png" alt="">
+            <img class="flower-pic"src="./images/pngwing 10.png" alt="">
         </div>
     </header>
     <main>
@@ -26,15 +26,15 @@
             <p class="section-description">It is a long established fact that a reader will be distracted by the  readable content of a page when looking at its layout.</p>
             <div class="flower-img-container">
                 <div  class="flower-img">
-                    <img  class="img-size" src="images/pngwing 6.png" alt="">
+                    <img  class="img-size" src="./images/pngwing 6.png" alt="">
                     <h4 class="flower-title">pink flower </h4>
                 </div>
                 <div class="flower-img">
-                    <img class="img-size" src="images/pngwing 5.png" alt="">
+                    <img class="img-size" src="./images/pngwing 5.png" alt="">
                     <h4 class="flower-title">pink flower </h4>
                 </div>
                 <div class="flower-img" >
-                    <img class="img-size" src="images/pngwing 7.png" alt="">
+                    <img class="img-size" src="./images/pngwing 7.png" alt="">
                     <h4 class="flower-title">pink flower </h4>
                 </div>
             </div>
@@ -46,28 +46,34 @@
                     <p class="sale-descripion">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
-                <img src="images/pngwing 8.png" alt="">
+                <img src="./images/pngwing 8.png" alt="">
             </div>
         </section>
         <section >
             <h3 class="section-title">Instagram</h3>
             <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             <div class="flower-imgs">
-                <img src="images/Flower 01.png" alt="">
-                <img src="images/Rectangle 4.png" alt="">
-                <img src="images/Rectangle 5.png" alt="">
-                <img src="images/Rectangle 6.png" alt="">
+                <img src="./images/Flower 01.png" alt="">
+                <img src="./images/Rectangle 4.png" alt="">
+                <img src="./images/Rectangle 5.png" alt="">
+                <img src="./images/Rectangle 6.png" alt="">
             </div>
         </section>
-        <section class="deals">
+        <section>
+            <div class="deals">
             <h3 class="section-title">Get The Latest Deals</h3>
             <p class="section-description">$30 coupon for first shopping</p>
-            <input type="email" name="" id="">
+        
+        <div class="your">
+            <input class="mail" type="email" placeholder=" enter your email here" name="" id="">
+            <button class="btn-primary">subscribe</button>
+        </div>
+    </div>
         </section>
     </main>
     <footer>
-        <h3>FlowerShop</h3>
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <h3 class="footer-title">FlowerShop</h3>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
     </footer>
 </body>
 </html>
