--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
                 </div>
             </div>
         </section>
+        <section class="bonas">
+            <div class="extra">
+                <div>
+                    <img src="./images/Group 57.png" alt="">
+                    <h3 class="extra-text">Same Day Delivery. Click & Collect.</h3>
+                </div>
+                <div>
+                    <img src="./images/Group 58.png" alt="">
+                    <h3 class="extra-text">Fresh Flowers. Local Growers.</h3>
+                </div>
+                <div>
+                    <img src="./images/Group 59.png" alt="">
+                    <h3 class="extra-text">24/7 Free Support.</h3>
+                </div>
+            </div>
+        </section>
         <section class="sale">
             <div class="sale-up">
                 <div class="sale-up-content">
@@ -72,8 +88,11 @@
         </section>
     </main>
     <footer>
-        <h3 class="footer-title">FlowerShop</h3>
-        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <div>
+        <h3 class="footer-title"><span class="text-primary">Flower</span>Shop</h3>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+        <h5 class="copy-right">&copy;2020-2023, FlowerShop.com. All rights reserved. </h5>
     </footer>
 </body>
 </html>
